--- a/config_files/hypr/variables.conf
+++ b/config_files/hypr/variables.conf
@@ -3,7 +3,7 @@
 $SUPER = SUPER
 $webapp = $browser --app # for chromium
 $terminal = kitty
-$browser = chromium
+$browser = msedge
 $email = $webapp=https://outlook.live.com/mail/0/ 
 $discord = discordcanary 
 $music = $webapp=https://play.qobuz.com/user/library/favorites/tracks 
