made terminal smaller, restored old programs

--- a/config_files/hypr/workspaces.conf
+++ b/config_files/hypr/workspaces.conf
@@ -5,9 +5,9 @@ source = $HOME/.config/hypr/variables.conf
 bind = $SUPER, T, togglespecialworkspace, terminal 
 workspace = special:terminal, on-created-empty:$terminal
 # windowrulev2 = bordersize 0, onworkspace: special:terminal
-# windowrulev2 = size 1920 2160, onworkspace: special:terminal
-# windowrulev2 = float, onworkspace: special:terminal
-# windowrulev2 = center, onworkspace: special:terminal
+windowrulev2 = size 1920 1440, onworkspace: special:terminal
+windowrulev2 = float, onworkspace: special:terminal
+windowrulev2 = center, onworkspace: special:terminal
 
 ### BROWSER
 
