--- a/config_files/hypr/appearance.conf
+++ b/config_files/hypr/appearance.conf
@@ -11,7 +11,7 @@ env = XCURSOR_SIZE,$cursor_size
 ### LOOK AND FEEL ###
 general {
     gaps_in = 5
-    gaps_out =  200, 700, 200, 700
+    gaps_out =  2, 0, 0, 0 # for some reason the top two row of pixels aren't showing
 
     border_size = 2
 
@@ -30,6 +30,7 @@ general {
 
     layout = dwindle
 }
+
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
