--- a/config_files/hypr/monitors.conf
+++ b/config_files/hypr/monitors.conf
@@ -16,27 +16,17 @@ monitorv2 {
 
 }
 
-
 monitorv2 {
-    output = HDMI-A-2
-    mode = 3840x2160@143.99
+    output = DP-3
+    mode = 2560x1080@59.97800
     scale = 1
     transform = 0
-    position = 0x0
+    position = 640x2160
 
     supports_wide_color = 1
     supports_hdr = 1
     bitdepth = 10
     cm = hdr
-    sdrbrightness = 1.4
+    sdrbrightness = 1.3
     sdr_min_luminance = 0.0
-
-}
-
-monitorv2 {
-    output = eDP-1
-    mode = 1920x1080@143.99899
-    scale = 1
-    transform = 0
-    position = 0x0
 }
