made spotify them ,usic provider

--- a/config_files/hypr/variables.conf
+++ b/config_files/hypr/variables.conf
@@ -6,7 +6,7 @@ $terminal = kitty
 $browser = chromium
 $email = $webapp=https://outlook.live.com/mail/0/ 
 $discord = discordcanary 
-$music = $webapp=https://play.qobuz.com/user/library/favorites/tracks 
+$music = spotify
 $onedrive = chromium --new-window 'https://onedrive.live.com/?view=1'
 $solidworks = chromium --new-window 'https://my.3dexperience.3ds.com/cnb/my-account/subscriptions'
 $gpt = $webapp=https://chat.openai.com 
