hyprpanel, msedge, other stuff

--- a/config_files/hypr/autostart.conf
+++ b/config_files/hypr/autostart.conf
@@ -5,8 +5,8 @@ env = PATH,$HOME/.cargo/bin:$PATH
 exec-once = xset r rate 190 50
 exec-once = hyprpaper
 exec-once = hyprctl setcursor $cursor_theme $cursor_size
-# exec-once = easyeffects --gapplication-service
 exec-once = hypridle
+exec-once = hyprpanel
 exec-once = hyprfocusd snitch
 exec-once = alga power on
 exec-once = ~/.home-manager/config_files/linux-wallpaperengine/wallpaper_cycle.sh
