hyprpanel tweaks, keybind stuff

--- a/config_files/hypr/keybinds.conf
+++ b/config_files/hypr/keybinds.conf
@@ -4,8 +4,8 @@ source = $HOME/.config/hypr/variables.conf
 
 # bind = SUPER, SPACE, exec, pkill wofi || wofi -S drun # app launcher
 bind = SUPER, SPACE, exec, wofi -S drun # app launcher
-bind = SUPER, Q, exec, $terminal # new terminal
-bind = SUPER, B, exec, $browser # new browser
+bind = SUPER SHIFT, T, exec, $terminal # new terminal
+bind = SUPER SHIFT, B, exec, $browser # new browser
 bind = ALT, F4, killactive
 bind = SUPER, F11, fullscreen
 # bind = SUPER, G, exec, gimp -n
