--- a/config_files/hypr/workspaces.conf
+++ b/config_files/hypr/workspaces.conf
@@ -1,52 +1,64 @@
 source = $HOME/.config/hypr/variables.conf
 
+$borderSize = 2
+
 ### TERMINAL
 
 bind = $SUPER, T, togglespecialworkspace, terminal 
 workspace = special:terminal, on-created-empty:$terminal
-# windowrulev2 = bordersize 0, onworkspace: special:terminal
 windowrulev2 = size 1920 1440, onworkspace: special:terminal
 windowrulev2 = float, onworkspace: special:terminal
 windowrulev2 = center, onworkspace: special:terminal
 
 ### BROWSER
 
-bind = $SUPER, C, togglespecialworkspace, browser 
+bind = $SUPER, B, togglespecialworkspace, browser 
 workspace = special:browser, on-created-empty:$browser 
-windowrulev2 = bordersize 0, onworkspace: special:browser
+windowrulev2 = bordersize borderSize, onworkspace: special:browser
+
+# example of binding a numbered workspace to specific program
+# bind = SUPER, C, focusworkspaceoncurrentmonitor, 10
+# workspace = 10, on-created-empty:$browser 
+# windowrulev2 = bordersize borderSize, onworkspace: 10
+
+### CURSOR 
+
+bind = $SUPER, C, togglespecialworkspace, cursor 
+workspace = special:cursor, on-created-empty:cursor
+windowrulev2 = bordersize borderSize, onworkspace: special:cursor
 
 ### GPT
 
 bind = $SUPER, G, togglespecialworkspace, gpt 
 workspace = special:gpt, on-created-empty:$gpt
-windowrulev2 = bordersize 0, onworkspace: special:gpt
+windowrulev2 = bordersize borderSize, onworkspace: special:gpt
 
 ### DISCORD
   
 bind = $SUPER, D, togglespecialworkspace, discord 
 workspace = special:discord, on-created-empty:$discord
-windowrulev2 = bordersize 0, onworkspace: special:discord 
+windowrulev2 = bordersize borderSize, onworkspace: special:discord 
 
 ### OneNote
   
 bind = $SUPER, O, togglespecialworkspace, onedrive 
 workspace = special:onedrive, on-created-empty:$onedrive  
-windowrulev2 = bordersize 0, onworkspace: special:onedrive 
+windowrulev2 = bordersize borderSize, onworkspace: special:onedrive 
 
 ### MUSIC
 
 bind = $SUPER, M, togglespecialworkspace, music 
 workspace = special:music, on-created-empty:$music
-windowrulev2 = bordersize 0, onworkspace: special:music
+windowrulev2 = bordersize borderSize, onworkspace: special:music
 
 ### Email
 
 bind = $SUPER, E, togglespecialworkspace, email 
 workspace = special:email, on-created-empty:$email  
-windowrulev2 = bordersize 0, onworkspace: special:email 
+windowrulev2 = bordersize borderSize, onworkspace: special:email 
 
 ### EXCEL
 
 bind = $SUPER, X, togglespecialworkspace, excel 
 workspace = special:excel, on-created-empty:$excel
-windowrulev2 = bordersize 0, onworkspace: special:excel
+windowrulev2 = bordersize borderSize, onworkspace: special:excel
