--- a/config_files/hyprpanel/config.json
+++ b/config_files/hyprpanel/config.json
@@ -416,7 +416,7 @@
   "bar.workspaces.monitorSpecific": true,
   "bar.workspaces.show_icons": false,
   "bar.workspaces.show_numbered": false,
-  "bar.workspaces.workspaceMask": true,
+  "bar.workspaces.workspaceMask": false,
   "bar.workspaces.showWsIcons": true,
   "bar.workspaces.showApplicationIcons": true,
   "bar.workspaces.showAllActive": true,
@@ -425,5 +425,35 @@
   "bar.windowtitle.custom_title": true,
   "bar.windowtitle.label": true,
   "bar.windowtitle.icon": true,
-  "theme.bar.buttons.volume.enableBorder": false
+  "theme.bar.buttons.volume.enableBorder": false,
+  "theme.bar.buttons.separator.margins": "0.15em",
+  "theme.bar.buttons.dashboard.enableBorder": false,
+  "bar.launcher.autoDetectIcon": true,
+  "menus.power.showLabel": false,
+  "bar.battery.label": false,
+  "bar.battery.hideLabelWhenFull": false,
+  "bar.customModules.netstat.dynamicIcon": false,
+  "theme.bar.buttons.separator.width": "0.1em",
+  "menus.dashboard.stats.enable_gpu": false,
+  "menus.dashboard.stats.enabled": true,
+  "menus.dashboard.controls.enabled": true,
+  "theme.bar.enableShadow": false,
+  "bar.workspaces.applicationIconOncePerWorkspace": true,
+  "menus.clock.time.military": false,
+  "menus.clock.time.hideSeconds": false,
+  "theme.bar.buttons.media.enableBorder": false,
+  "bar.media.truncation": true,
+  "bar.media.show_label": true,
+  "theme.bar.buttons.clock.enableBorder": false,
+  "bar.clock.showIcon": true,
+  "bar.clock.showTime": true,
+  "theme.bar.buttons.systray.enableBorder": false,
+  "theme.bar.buttons.battery.spacing": "0.5em",
+  "theme.bar.buttons.battery.enableBorder": false,
+  "theme.bar.buttons.bluetooth.enableBorder": false,
+  "bar.bluetooth.label": false,
+  "bar.network.label": false,
+  "bar.volume.label": true,
+  "theme.bar.scaling": 100,
+  "menus.dashboard.powermenu.avatar.image": "/home/trevogre/.home-manager/config_files/hyprpanel/Profile.png"
 }
